# uvx-example

./: README.md  main.py  pyproject.toml
src/uvx-example1/: README.md  pyproject.toml
src/uvx-example1/example/: __init__.py
src/uvx-example2/: README.md  pyproject.toml
src/uvx-example2/example/: __init__.py
src/uvx-example2/example/example2/: __init__.py
