[project]
name = "uvx-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/example1", "src/example2"]

[project.scripts]
uvx-example = "main:main"
example1 = "example1.main:main"
example2 = "example2.main:main"
